test: Add test cases - decision path and apply

--- a/Feature_importance.ipynb
+++ b/Feature_importance.ipynb
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -133,6 +133,141 @@
     "plt.figure(figsize=(20,15))\n",
     "plot_tree(model_dt, node_ids=True, fontsize=14, feature_names=data['feature_names'], filled=True)\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **decision_path**: Return decision path of each sample as matrix form. If the $j$-th component of the $i$-th row is one, the $i$-th sample goes through the $j$-th node when it's being predicted.\n",
+    "\n",
+    "* **apply**: Return the index of the leaf node that each sample is predicted as. If the value of the $i$-th component of the output array is $j$, the $i$-th sample stopped at $j$-th node."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dp = model_dt.decision_path(X_train).toarray()\n",
+    "apply = []\n",
+    "for row in dp:\n",
+    "    final_idx = np.where(row==1)[0][-1]\n",
+    "    apply.append(final_idx)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* The index of the last non-zero component in the $i$-th sample equals to the $i$-th component of the apply method's returns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.alltrue(np.array(apply)== model_dt.apply(X_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unique_values, unique_counts = np.unique(model_dt.apply(X_train), return_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 127,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(unique_counts) == X_train.shape[0]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* Each leaf node has the unique decision path i.e. each decision path and leaf node is one-to-one corresponding."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_nodes = model_dt.tree_.node_count\n",
+    "c2p = parent(model_dt)\n",
+    "dic_path = dict()\n",
+    "for n in range(n_nodes):\n",
+    "    array = np.zeros(n_nodes)\n",
+    "    array[0] = 1\n",
+    "    c = n\n",
+    "    while c != 0:\n",
+    "        array[c] = 1\n",
+    "        c = c2p[c]\n",
+    "    dic_path[n] = array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dpath = np.array([]).reshape(-1, n_nodes)\n",
+    "for row in range(X_train.shape[0]):\n",
+    "    dpath = np.vstack((dpath, dic_path[apply[row]]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 125,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 125,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.alltrue(model_dt.decision_path(X_train).toarray() == dpath)"
    ]
   },
   {
