fix: Correct error raised during print tree

--- a/Represent_tree.ipynb
+++ b/Represent_tree.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,8 +66,7 @@
     "        parent_node = self._parent()\n",
     "        node_depth = self._depth()\n",
     "        n_feats = self.model.n_features_\n",
-    "        \n",
-    "        if feat_names == None:\n",
+    "        if feat_names is None:\n",
     "            feat_names = list('F{}'.format(str(i).zfill(len(str(n_feats)))) for i in range(n_feats))\n",
     "        feat_in_node = self.model.tree_.feature\n",
     "        threshold = self.model.tree_.threshold\n",
@@ -173,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -181,48 +180,26 @@
      "output_type": "stream",
      "text": [
       "Depth 0\n",
-      "node #0 F05 <= 6.941 mse = 86.8734 samples = 404 value = 22.7965 parent_node = 0 || \n",
+      "node #0 RM <= 6.941 mse = 86.8734 samples = 404 value = 22.7965 parent_node = 0 || \n",
       "\n",
       "Depth 1\n",
-      "node #1 F12 <= 14.4 mse = 40.3212 samples = 337 value = 19.9466 parent_node = 0 || node #2 F05 <= 7.437 mse = 74.6839 samples = 67 value = 37.1313 parent_node = 0 || \n",
+      "node #1 LSTAT <= 14.4 mse = 40.3212 samples = 337 value = 19.9466 parent_node = 0 || node #2 RM <= 7.437 mse = 74.6839 samples = 67 value = 37.1313 parent_node = 0 || \n",
       "\n",
       "Depth 2\n",
-      "node #3 F07 <= 1.3848 mse = 25.6935 samples = 203 value = 23.3246 parent_node = 1 || node #4 F00 <= 6.9258 mse = 19.0053 samples = 134 value = 14.8291 parent_node = 1 || node #5 F12 <= 15.765 mse = 38.3057 samples = 41 value = 32.3634 parent_node = 2 || node #6 F10 <= 19.65 mse = 39.671 samples = 26 value = 44.65 parent_node = 2 || \n",
+      "node #3 DIS <= 1.3848 mse = 25.6935 samples = 203 value = 23.3246 parent_node = 1 || node #4 CRIM <= 6.9258 mse = 19.0053 samples = 134 value = 14.8291 parent_node = 1 || node #5 LSTAT <= 15.765 mse = 38.3057 samples = 41 value = 32.3634 parent_node = 2 || node #6 PTRATIO <= 19.65 mse = 39.671 samples = 26 value = 44.65 parent_node = 2 || \n",
       "\n",
       "Depth 3\n",
-      "node #7 F00 <= 10.1092 mse = 91.5769 samples = 4 value = 44.475 parent_node = 3 || node #8 F05 <= 6.543 mse = 15.1967 samples = 199 value = 22.8995 parent_node = 3 || node #11 F11 <= -2.0 mse = 10.4013 samples = 76 value = 17.0618 parent_node = 4 || node #12 F11 <= -2.0 mse = 15.1879 samples = 58 value = 11.9034 parent_node = 4 || node #13 F11 <= -2.0 mse = 21.5856 samples = 39 value = 33.3 parent_node = 5 || node #14 F11 <= -2.0 mse = 13.69 samples = 2 value = 14.1 parent_node = 5 || node #15 F11 <= -2.0 mse = 19.7272 samples = 25 value = 45.56 parent_node = 6 || node #16 F11 <= -2.0 mse = -0.0 samples = 1 value = 21.9 parent_node = 6 || \n",
+      "node #7 CRIM <= 10.1092 mse = 91.5769 samples = 4 value = 44.475 parent_node = 3 || node #8 RM <= 6.543 mse = 15.1967 samples = 199 value = 22.8995 parent_node = 3 || node #11 B <= -2.0 mse = 10.4013 samples = 76 value = 17.0618 parent_node = 4 || node #12 B <= -2.0 mse = 15.1879 samples = 58 value = 11.9034 parent_node = 4 || node #13 B <= -2.0 mse = 21.5856 samples = 39 value = 33.3 parent_node = 5 || node #14 B <= -2.0 mse = 13.69 samples = 2 value = 14.1 parent_node = 5 || node #15 B <= -2.0 mse = 19.7272 samples = 25 value = 45.56 parent_node = 6 || node #16 B <= -2.0 mse = -0.0 samples = 1 value = 21.9 parent_node = 6 || \n",
       "\n",
       "Depth 4\n",
-      "node #17 F11 <= -2.0 mse = 0.0 samples = 3 value = 50.0 parent_node = 7 || node #18 F11 <= -2.0 mse = -0.0 samples = 1 value = 27.9 parent_node = 7 || node #9 F11 <= -2.0 mse = 8.6351 samples = 156 value = 21.6321 parent_node = 8 || node #10 F11 <= -2.0 mse = 12.0305 samples = 43 value = 27.4977 parent_node = 8 || \n",
+      "node #17 B <= -2.0 mse = 0.0 samples = 3 value = 50.0 parent_node = 7 || node #18 B <= -2.0 mse = -0.0 samples = 1 value = 27.9 parent_node = 7 || node #9 B <= -2.0 mse = 8.6351 samples = 156 value = 21.6321 parent_node = 8 || node #10 B <= -2.0 mse = 12.0305 samples = 43 value = 27.4977 parent_node = 8 || \n",
       "\n"
      ]
     }
    ],
    "source": [
     "rt = represent_tree(model_dt)\n",
-    "rt.print_tree(round_digit=4)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-21-6b3bde502d5c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mrt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mprint_tree\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfeat_names\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'feature_names'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-18-00e5afd2672b>\u001b[0m in \u001b[0;36mprint_tree\u001b[1;34m(self, round_digit, feat_names)\u001b[0m\n\u001b[0;32m     34\u001b[0m         \u001b[0mnode_depth\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_depth\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     35\u001b[0m         \u001b[0mn_feats\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn_features_\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 36\u001b[1;33m         \u001b[1;32mif\u001b[0m \u001b[0mfeat_names\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     37\u001b[0m             \u001b[0mfeat_names\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'F{}'\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mzfill\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_feats\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mn_feats\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     38\u001b[0m         \u001b[0mfeat_in_node\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtree_\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfeature\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: The truth value of an array with more than one element is ambiguous. Use a.any() or a.all()"
-     ]
-    }
-   ],
-   "source": [
-    "rt.print_tree(feat_names=data['feature_names'])"
+    "rt.print_tree(round_digit=4, feat_names=data['feature_names'])"
    ]
   },
   {
